src/styles/components/_profile.scss
.profile {
  &__container {
    @media #{$screen-lg} {
      position: relative;
      max-width: 250px;
    }
  }

  &__image-wrapper {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 0;
    background-color: $color-white;
  }

  &__image {
    width: 100%;
    height: 100%;
    padding-bottom: 114%;
    background-position: center center;
    background-size: cover;
  }

  &__location,
  &__name {
    @include heading;

    text-transform: uppercase;
  }

  &__location {
    font-size: 12px;
  }

  &__name {
    font-size: 24px;

    @media #{$screen-md} {
      font-size: 32px;
    }

    @media #{$screen-lg} {
      font-size: 48px;
    }
  }

  &__detail {
    margin-top: 10px;

    @media #{$screen-md} {
      position: absolute;
      bottom: 0;
      width: 100%;
      margin: 0;

      &--index {
        &-0 {
          transform: translate(-20%, -100%);
        }

        &-1 {
          top: 0;
          transform: translate(80%, -20%);
        }

        &-2 {
          transform: translate(-25%, 40%);
        }

        &-3 {
          transform: translate(-20%, 50%);
        }

        &-4 {
          transform: translate(20%, 45%);
        }

        &-5 {
          transform: translate(55%, -60%);
        }

        &-6 {
          transform: translate(-20%, 25%);
        }

        &-7 {
          transform: translate(-30%, 40%);
        }
      }
    }

    @media #{$screen-lg} {
      line-height: 1.1;

      &--index {
        &-0 {
          transform: translate(-25%, -50%);
        }

        &-1 {
          top: 0;
          transform: translate(80%, -25%);
        }

        &-2 {
          transform: translate(-45%, 45%);
        }

        &-3 {
          transform: translate(-25%, 65%);
        }

        &-4 {
          transform: translate(20%, 45%);
        }

        &-5 {
          transform: translate(75%, -50%);
        }

        &-6 {
          transform: translate(-20%, 25%);
        }

        &-7 {
          transform: translate(-40%, 45%);
        }
      }
    }
  }

  @media #{$screen-lg} {
    width: 33%;
    max-width: initial;
  }
}

